--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ html {
   font-size: 8rem;
   font-weight: 300;
   color: #fff;
-  width: 50%;
+  width: 100%;
   line-height: 9rem;
   letter-spacing: 0.2rem;
   text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
@@ -295,7 +295,7 @@ html {
   font-family: "Josefin Slab", serif;
   font-size: 4rem;
   color: #fff;
-  width: 70%;
+  width: 100%;
   letter-spacing: 0.1rem;
   margin-bottom: 3rem;
   text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
@@ -584,7 +584,7 @@ html {
   font-family: "Muli", serif;
   font-size: 2rem;
   font-weight: 500;
-  color: #a52a2a;
+  color: #16be40;
   margin-bottom: 1rem;
 }
 
